# netbox-wdm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  STATUS.md  pyproject.toml
.devcontainer/: Dockerfile-plugin_dev  devcontainer.json  docker-compose.yml  entrypoint-dev.sh  requirements-dev.txt
.devcontainer/configuration/: configuration.py  plugins.py
.devcontainer/env/: netbox.env  redis.env
.github/workflows/: ci.yml  publish.yml
docs/: TODO.md
docs/developer/: style-guide.md
docs/superpowers/plans/: 2026-03-23-netbox-wdm-implementation.md  2026-03-25-wdm-devicetype-integration.md
netbox_wdm/: __init__.py  choices.py  filters.py  forms.py  models.py  navigation.py  search.py  signals.py  tables.py  template_content.py  urls.py  views.py  wdm_constants.py
netbox_wdm/api/: serializers.py  urls.py  views.py
netbox_wdm/graphql/: filters.py  schema.py  types.py
netbox_wdm/management/commands/: create_wdm_sample_data.py
netbox_wdm/migrations/: 0001_initial.py  0002_alter_wavelengthchannel_unique_together_and_more.py
netbox_wdm/static/netbox_wdm/: bundle.cjs  package-lock.json  package.json  tsconfig.json
netbox_wdm/static/netbox_wdm/css/: wdm-components.css
netbox_wdm/static/netbox_wdm/src/: wavelength-editor-types.ts  wavelength-editor.ts
netbox_wdm/templates/netbox_wdm/: devicetype_wdm_tab.html  wavelengthchannel.html  wavelengthservice.html  wavelengthservice_trace_tab.html  wdmchannel.html  wdmchannelplan.html  wdmchanneltemplate.html  wdmcircuit.html  wdmcircuit_trace_tab.html  wdmdevicetypeprofile.html  wdmlineport.html  wdmnode.html  wdmnode_wavelength_editor.html  wdmprofile.html  wdmtrunkport.html
netbox_wdm/templates/netbox_wdm/inc/: cable_wdm_services_panel.html  device_wdm_panel.html
tests/: conftest.py  test_api.py  test_constants.py  test_graphql.py  test_models.py
